third_party/move/move-compiler-v2/tests/folding/constants_single_quote.exp

Diagnostics:
error: invalid character
  ┌─ tests/folding/constants_single_quote.move:4:22
  │
4 │     const C13: u64 = ";
  │                      ^ Invalid character: '"'
